# ai-medical-bot

./: .gitignore  app.py  dify.html  index.html  main.py  pyproject.toml  requirements.txt  setup.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
research/: trials.ipynb
src/: helper.py
