[project]
name = "ai-medical-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "huggingface-hub>=0.36.2",
    "langchain>=0.3.30",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.86",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-pinecone>=0.2.0",
    "pinecone[grpc]>=9.1.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers==2.2.2",
    "setuptools>=81.0.0",
    "torch>=2.12.1",
]

[tool.uv.workspace]
members = [
    "ai-medical-bot",
]
